--- a/CmsFrontend/src/components/nav/Nav.css
+++ b/CmsFrontend/src/components/nav/Nav.css
@@ -33,8 +33,12 @@
    margin:0 2rem;
    font-size:1.2rem;
  }
+
+ .aa{
+  font-size: 0.3rem;
+ }
  .logo{
-   font-size:2rem;
+   font-size:1.5rem;
    margin-bottom:.3rem;
    margin-left:.6rem
  }
@@ -43,8 +47,8 @@
    flex:1;
  }
  .toggle-Btn{
-   width:40px;
-   height:30px;
+   width: 27px;
+   height:22px;
    background:transparent;
    display:flex;
    flex-direction:column;
