--- a/CmsFrontend/src/components/nav/Nav.css
+++ b/CmsFrontend/src/components/nav/Nav.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   box-sizing:border-box;
    padding:0;
    margin:0;
@@ -107,7 +107,6 @@
    top:0;
    right:0;
    bottom:0;
- /*   transition: right ease 1.2s; */
  }
  .sidebar.active{
    left:0;
@@ -118,4 +117,30 @@
    margin-top:80px;
    margin-left:1rem;
  }
- 
+  */
+
+  .navbar {
+    background-color: #468bb3;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nav-logo a {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+  }
+  
+  .nav-links a {
+    color: white;
+    margin-left: 20px;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+  }
+  
+  .nav-links a:hover {
+    color: #88c1e0;
+  }
+  
